# ros2_cart_pole_DQN

./: .gitignore  CLAUDE.md  CMakeCache.txt
.claude/: settings.local.json
docs/: PORT_NOTES.md
docs/superpowers/plans/: 2026-07-20-ros1-to-ros2-port.md
src/commander/: package.xml  setup.py
src/commander/commander/: dqn_learning.py
src/commander/launch/: commander_launch.py
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/launch/: robot_control_launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/robot/: cart_pole.urdf.xacro
src/robot_launch/: CMakeLists.txt  package.xml
src/robot_launch/launch/: launch_simulation.launch.py
src/robot_launch/worlds/: robomaster_rale.world
