<?xml version="1.0"?>
<package format="3">
  <name>robot_launch</name>
  <version>0.0.0</version>
  <description>Top-level launch file for the cart_pole DQN simulation</description>
  <maintainer email="robomania@todo.todo">robomania</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>robot_control</exec_depend>
  <exec_depend>commander</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
